New jobs=>updates2

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ workflows:
   say-hello-workflow:
     jobs:
       - print-ci-hello
-      - print-ci-world
-         requires:
+      - print-ci-world:
+        requires:
           - print-ci-hello
   
