Added the shared information for the workspace

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,6 +41,34 @@ jobs:
       - run:
           name: "print-ci-author"
           command: echo $AUTHOR_NAME
+  save_hello_world_output:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - run:
+          name: "save_hello_world_output"
+          command: echo "Hello World" > /tmp/workspace/output.txt
+      - persist_to_workspace:
+          root: /tmp/workspace/
+          paths:
+            - output.txt
+      - attach_workspace:
+          root: /tmp/workspace/ !Ref output.txt
+          paths:
+            - target/application.jar
+            - build/*
+
+  print_output_file:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - run:
+          name: "print_output_file"
+          command: cat /tmp/workspace/output.txt
+      - attach_workspace:
+          at: /tmp/workspace
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
@@ -53,5 +81,9 @@ workflows:
           requires:
             - print-ci-hello
       - print-ci-author
+      - save_hello_world_output
+      - print_output_file:
+          requires:
+            - save_hello_world_output
     
   
