--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -74,7 +74,12 @@ jobs:
       - run:
           name: "print_output_file"
           command: cat ~/output.txt
-  <<:&commands
+  reusable_code:
+    docker:
+      - image: circleci/node:13.8.0
+    steps:
+      - checkout
+      - print_pipeline_id:
       
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
@@ -91,5 +96,6 @@ workflows:
       - print_output_file:
           requires:
             - save_hello_world_output
+      - reusable_code
     
   
