--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,6 @@ version: 2.1
 
 commands:
   print_pipeline_id:
-    description: "A very simple command for demonstration purposes"
     steps:
       - run: echo ${CIRCLE_WORKFLOW_ID}
 
@@ -75,7 +74,7 @@ jobs:
       - image: circleci/node:13.8.0
     steps:
       - checkout
-      - print_pipeline_id:
+      - print_pipeline_id
       
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
